--- a/style.css
+++ b/style.css
@@ -206,9 +206,9 @@ footer{
 
     .img-1{
         position: absolute;
-        top: 20px;
+        top: 10%;
         left: 28%;
-        min-width: 100px;
+        min-width: 150px;
         
     }
     
